# mega65-libc

./: .gitignore  CMakeLists.txt  Makefile  Makefile_cc65  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  conio.c  debug.c  fcio.c  memory.c  mouse.c  tests.c
tests/: CMakeLists.txt
